Port to Typescript

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,26 @@
-build/
-reports/
+node_modules
 
-# Node.js
-node_modules/
-npm-debug.log
+# build
+*.tsbuildinfo
+dist
 
-# Mac OS X
+# logs/reports
+*.run.json
+*.log
+
+# tools
+.idea
+workspace.xml
+.eslintcache
+.cache
+.vscode
+.vs
+.npm
+
+# os
 .DS_Store
+thumbs.db
+desktop.ini
+
+# misc
+.env
