--- a/package.json
+++ b/package.json
@@ -1,45 +1,76 @@
 {
-  "name": "passport-digitalocean",
-  "version": "0.0.2",
-  "description": "DigitalOcean authentication strategy for Passport.",
-  "keywords": [
-    "passport",
-    "digitalocean",
-    "auth",
-    "authn",
-    "authentication",
-    "identity"
-  ],
-  "author": {
-    "name": "Dimitris Kapanidis",
-    "email": "d.kapanidis@gmail.com",
-    "url": "https://twitter.com/spiddy"
-  },
-  "repository": {
-    "type": "git",
-    "url": "http://github.com/harbur/passport-digitalocean.git"
-  },
-  "bugs": {
-    "url": "http://github.com/harbur/passport-digitalocean/issues"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://www.opensource.org/licenses/MIT"
-    }
-  ],
-  "main": "./lib",
-  "dependencies": {
-    "passport-oauth2": "1.x.x"
-  },
-  "devDependencies": {
-    "mocha": "1.x.x",
-    "chai": "1.x.x"
-  },
-  "engines": {
-    "node": ">= 0.4.0"
-  },
-  "scripts": {
-    "test": "node_modules/.bin/mocha --reporter spec --require test/bootstrap/node test/*.test.js"
-  }
+	"name": "@agyemanjp/passport-digitalocean",
+	"version": "0.0.2",
+	"description": "DigitalOcean authentication strategy for Passport, written in TypeScript",
+	"keywords": [
+		"passport",
+		"digitalocean",
+		"auth",
+		"authn",
+		"authentication",
+		"identity",
+		"typescript"
+	],
+	"repository": {
+		"type": "git",
+		"url": "http://github.com/agyemanjp/passport-digitalocean.git"
+	},
+	"bugs": {
+		"url": "http://github.com/agyemanjp/passport-digitalocean/issues"
+	},
+	"contributors": [
+		{
+			"name": "James Prempeh",
+			"url": "http://github.com/agyemanjp"
+		},
+		{
+			"name": "Dimitris Kapanidis",
+			"email": "d.kapanidis@gmail.com",
+			"url": "https://twitter.com/spiddy"
+		}
+	],
+	"licenses": [
+		{
+			"type": "MIT",
+			"url": "http://www.opensource.org/licenses/MIT"
+		}
+	],
+	"main": "index.js",
+	"types": "index.d.ts",
+	"files": [
+		"*",
+		"!*.tsbuildinfo"
+	],
+	"dependencies": {
+		"passport-oauth2": "1.x.x"
+	},
+	"devDependencies": {
+		"@types/expect.js": "^0.3.29",
+		"@types/node": "^18.7.14",
+		"@types/passport-oauth2": "^1.4.11",
+		"@typescript-eslint/eslint-plugin": "^5.36.1",
+		"@typescript-eslint/parser": "^5.36.1",
+		"chai": "^3.4.0",
+		"eslint": "^8.23.0",
+		"expect.js": "^0.3.1",
+		"mocha": "^2.3.3",
+		"npm-run-all": "^4.1.5",
+		"typescript": "^4.8.2"
+	},
+	"scripts": {
+		"deps": "rm -rf ./node_modules package-lock.json && npm install",
+		"clean": "rm -rf dist/* .eslintcache *.run.json",
+		"lint": "eslint --ext ts --cache 'lib/**'",
+		"compile": "tsc",
+		"test": "mocha test/*.test.*",
+		"build": "run-s lint compile test",
+		"pubstage": "cp package.json LICENSE README.md dist",
+		"pubpreview": "npm run pubstage && cd dist && npm publish --dry-run && cd ..",
+		"version:patch": "npm version patch && git push --follow-tags",
+		"version:minor": "npm version minor && git push --follow-tags",
+		"version:major": "npm version major && git push --follow-tags",
+		"publish:patch": "run-s build version:patch pubstage && cd dist && npm publish --access public && cd ..",
+		"publish:minor": "run-s build version:minor pubstage && cd dist && npm publish --access public && cd ..",
+		"publish:major": "run-s build version:major pubstage && cd dist && npm publish --access public && cd .."
+	}
 }
